[gd_scene load_steps=7 format=3 uid="uid://b3ashtocfscm6"]

[ext_resource type="Script" uid="uid://bjygtusjgapr6" path="res://Assets/Scripts/sprinkler.gd" id="1_1c4c2"]
[ext_resource type="SpriteFrames" uid="uid://cf1s3nee33qdo" path="res://Assets/SpriteFrames/sprite_frames_sprinkler.tres" id="2_l7o5o"]
[ext_resource type="Texture2D" uid="uid://3vqvfgyt3s5u" path="res://Assets/Images/Particle/Sprinkle-Water.png" id="3_l7o5o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8nt83"]

[sub_resource type="Curve" id="Curve_lc68q"]
_data = [Vector2(0, 0.213483), 0.0, 0.0, 0, 0, Vector2(1, 0.202247), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7yxrn"]
_data = [Vector2(0.164773, 0.168539), 0.0, 0.0, 0, 0, Vector2(1, 0.269663), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Sprinkler" type="Area2D"]
script = ExtResource("1_1c4c2")

[node name="Sprinkler_Area" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8nt83")

[node name="Sprinkler_Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("2_l7o5o")

[node name="South" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, 8)
emitting = false
amount = 10
texture = ExtResource("3_l7o5o")
lifetime = 0.35
one_shot = true
explosiveness = 0.09
randomness = 0.19
direction = Vector2(0, 1)
spread = 23.64
gravity = Vector2(0, 100)
initial_velocity_min = 126.11
initial_velocity_max = 126.11
scale_amount_min = 2.0
scale_amount_max = 3.0
split_scale = true
scale_curve_x = SubResource("Curve_lc68q")
scale_curve_y = SubResource("Curve_7yxrn")

[node name="East" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(9, 0)
emitting = false
amount = 10
texture = ExtResource("3_l7o5o")
lifetime = 0.35
one_shot = true
explosiveness = 0.09
randomness = 0.19
direction = Vector2(10, 2)
spread = 46.76
gravity = Vector2(0, 100)
initial_velocity_min = 126.11
initial_velocity_max = 126.11
angle_min = 90.0
angle_max = 90.0
scale_amount_min = 2.0
scale_amount_max = 3.0
split_scale = true
scale_curve_x = SubResource("Curve_lc68q")
scale_curve_y = SubResource("Curve_7yxrn")

[node name="West" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(-9, 0)
emitting = false
amount = 10
texture = ExtResource("3_l7o5o")
lifetime = 0.35
one_shot = true
explosiveness = 0.09
randomness = 0.19
direction = Vector2(-10, 2)
spread = 46.76
gravity = Vector2(0, 100)
initial_velocity_min = 126.11
initial_velocity_max = 126.11
angle_min = 90.0
angle_max = 90.0
scale_amount_min = 2.0
scale_amount_max = 3.0
split_scale = true
scale_curve_x = SubResource("Curve_lc68q")
scale_curve_y = SubResource("Curve_7yxrn")

[node name="North" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
emitting = false
amount = 10
texture = ExtResource("3_l7o5o")
lifetime = 0.35
one_shot = true
explosiveness = 0.09
randomness = 0.19
direction = Vector2(0, -1)
spread = 23.64
gravity = Vector2(0, 100)
initial_velocity_min = 126.11
initial_velocity_max = 126.11
scale_amount_min = 2.0
scale_amount_max = 3.0
split_scale = true
scale_curve_x = SubResource("Curve_lc68q")
scale_curve_y = SubResource("Curve_7yxrn")

[node name="sprayTimer" type="Timer" parent="."]

[connection signal="timeout" from="sprayTimer" to="." method="_on_spray_timer_timeout"]
